--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,14 @@
       gtag('config', 'G-TM12PMJDK5');
     </script>
 
+    <!-- Open Graph / Facebook meta tags -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.cabin.lt">
+    <meta property="og:title" content="Cabin Dreaming">
+    <meta property="og:description" content="Cabin in the woods soundscapes. Experience nature's tranquility. Mix soothing sounds for a moment of calm and relaxation.">
+    <meta property="og:image" content="https://www.cabin.lt/img/ogimage.png">
+    <meta property="og:image:alt" content="Cabin Dreaming">   
+
   </head>
   <body>
     <noscript>
